Resolve whitespace underneath footer issue

--- a/app/assets/stylesheets/photos.scss
+++ b/app/assets/stylesheets/photos.scss
@@ -126,7 +126,7 @@ nav{
 
 #sidescrolling-container-buffer{
   display: flex;
-  height: 89.5%;
+  height: 90.75%;
 }
 
 #sidescrolling-container{
